<resources>
    <string name="app_name">pics-trainning</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to</string>
    <string name="textual">Already Have An Account?</string>
    <string name="register">New user? Register now!</string>
    <string name="email">E-mail</string>
    <string name="home">Do you already have an account?</string>
    <string name="text1">Learning disabilities cannot be cured, but they
    can be treated successfully and children with LD can go live happy
    successful lives."
    -Anne Ford</string>
    <string name="title_activity_new_game">NewGame</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>